A11y (mnemonic for label, name, desc, focus for infinite progress). Also removed hacks (icon retrieving, default button disabling).

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -435,6 +435,9 @@ ACS_ActionsPanel.ShortcutLabel.a11yDesc=Fill Shorcut by Keys combination
 FMT_ActionsPanel.AlreadyBound=There is already an action bound to this shortcut ({0}).\nDo you want to use the newly selected action instead?
 
 # Exit dialog
+ACC_InfiniteProgressName=Infinite Progress Bar
+ACC_InfiniteProgressDesc=Shows some tasks are in progress.
+
 CTL_ActionInProgress=action in progress
 CTL_ExitTitle=Save
 CTL_Save=Save
@@ -455,6 +458,7 @@ CTL_Title_Exception=Exception
 LAB_EndTasks=End Tasks
 LAB_EndTasksMnem=E
 LAB_PendingTasks=Please wait while IDE finishes some tasks:
+LAB_PendingTasksMnem=P
 LAB_AUTH_User_Name=User Name\:
 LAB_AUTH_Password=Password\:
 LAB_FS_Configuration=Configuration
