--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -65,36 +65,59 @@ LAB_WindowBorder=Window Border
 LAB_WindowText=Window Text
 
 #CustomTableModelEditor
+CTL_TableModelTitle=Table Model
+CTL_TableModelTitle_Mnemonic=T
+ACSD_CTL_TableModelTitle=N/A
 CTL_Title1=Specify Title and Column Types Here:
+CTL_Title1_Mnemonic=S
+ACSD_CTL_Title1=N/A
 CTL_Column=Column
 CTL_Title=Title
 CTL_Type=Type
 CTL_Editable=Editable
 CTL_Rows=Rows:
+CTL_Rows_Mnemonic=R
+ACSD_CTL_Rows=N/A
 CTL_Columns=Columns:
+CTL_Columns_Mnemonic=C
+ACSD_CTL_Columns=N/A
 CTL_Title2=Table Settings
 CTL_DefaultTableValues=Default Table Values:
+CTL_DefaultTableValues_Mnemonic=V
+ACSD_CTL_DefaultTableValues=N/A
 CTL_DefaultValues=Default Values
 CTL_Insert=Insert
+CTL_InsertRow_Mnemonic=I
+CTL_InsertColumn_Mnemonic=n
 CTL_HINT_InsertColumn=Insert one column at selected position.
 CTL_HINT_InsertRow=Insert one row at selected position.
 CTL_Delete=Delete
+CTL_DeleteRow_Mnemonic=D
+CTL_DeleteColumn_Mnemonic=l
 CTL_HINT_DeleteColumn=Delete selected column.
 CTL_HINT_DeleteRow=Delete selected row.
 CTL_MoveRowUp=Move Up
+CTL_MoveRowUp_Mnemonic=U
 CTL_HINT_MoveColumnUp=Change position of selected column (move up)
 CTL_HINT_MoveRowUp=Change position of selected row (move up)
 CTL_MoveRowDown=Move Down
+CTL_MoveRowDown_Mnemonic=w
 CTL_HINT_MoveColumnDown=Change position of selected column (move down)
 CTL_HINT_MoveRowDown=Change position of selected row (move down)
 CTL_MoveColumnLeft=Move Left
+CTL_MoveColumnLeft_Mnemonic=f
 CTL_HINT_MoveColumnLeft=Change position of selected column (move left)
 CTL_MoveColumnRight=Move Right
+CTL_MoveColumnRight_Mnemonic=g
 CTL_HINT_MoveColumnRight=Change position of selected column (move right)
 CTL_CountPlus=+
+CTL_CountPlusRow_Mnemonic=,
+CTL_CountPlusColumn_Mnemonic=[
 CTL_HINT_AddColumn=Add column
 CTL_HINT_AddRow=Add row
 CTL_CountMinus=-
+CTL_CountMinusRow_Mnemonic=.
+CTL_CountMinusColumn_Mnemonic=]
 CTL_HINT_RemoveColumn=Remove column
 CTL_HINT_RemoveRow=Remove row
 
@@ -104,6 +127,8 @@ CTL_Width=Width:
 CTL_Width_mnemonic=W
 CTL_Height=Height:
 CTL_Height_mnemonic=H
+ACSD_CTL_Width=N/A
+ACSD_CTL_Height=N/A
 
 #DimensionEditor
 CTL_HintFormat=[width,height]
@@ -129,9 +154,17 @@ CTL_Preview=Preview
 #InsetsCustomEditor
 CTL_Insets=Insets
 CTL_Top=Top:
+CTL_Top_Mnemonic=T
 CTL_Left=Left:
+CTL_Left_Mnemonic=L
 CTL_Bottom=Bottom:
+CTL_Bottom_Mnemonic=B
 CTL_Right=Right:
+CTL_Right_Mnemonic=R
+ACSD_CTL_Top=N/A
+ACSD_CTL_Left=N/A
+ACSD_CTL_Bottom=N/A
+ACSD_CTL_Right=N/A
 
 #InsetsEditor
 CTL_HintFormatIE=[top,left,bottom,right]
@@ -164,7 +197,11 @@ CTL_NullItem=<Lookup null item>
 #PointCustomEditor
 CTL_Point=Point
 CTL_X=X:
+CTL_X_Mnemonic=X
+ACSD_CTL_X=N/A
 CTL_Y=Y:
+CTL_Y_Mnemonic=Y
+ACSD_CTL_Y=N/A
 
 #PointEditor
 CTL_HintFormatPE=[x,y]
