I18N improvements and checks for null Lookup result added.

--- a/o.n.core/src/org/netbeans/core/filesystems/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/filesystems/Bundle.properties
@@ -16,3 +16,5 @@ Invalid_XML_document=Invalid XML document:
 W-001=While parsing: {0} at {1}
 
 W-002=See #16484 for possible reason description if input file does not contain mentioned error:
+
+W-003=Warning: XML parser does not support lexical-handler feature.
