--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -107,12 +107,15 @@ HINT_FORMDESIGNER_BORDER_COLOR=The color of the border around designed component
 
 # generic OK button label used in Form Module
 CTL_OK=OK
+ACSD_CTL_OK=N/A
 # generic Cancel button label used in Form Module
 CTL_CANCEL=Cancel
+ACSD_CTL_CANCEL=N/A
 
 # Advanced button label used in Form Custom property editor
 CTL_Advanced=Advanced...
 CTL_Advanced_mnemonic=A
+ACSD_CTL_Advanced=N/A
 
 # displayed text of not set value (for "write only" properties)
 CTL_ValueNotSet=<Not Set>
@@ -151,8 +154,10 @@ FMT_WarningItem=WARNING: {0}
 # {0} = description of the error
 FMT_ErrorItem=ERROR: {0}
 CTL_CLOSE=Close
+ACSD_CTL_CLOSE=N/A
 CTL_DETAILS=Details
 CTL_DETAILS_Mnemonic=D
+ACSD_CTL_DETAILS=N/A
 
 ERR_COMPONENT_NAME_ALREADY_IN_USE=Two components in the same form cannot have the same name.
 ERR_INVALID_COMPONENT_NAME=The name of a component must be a valid Java variable name.
@@ -403,17 +408,45 @@ FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
   CTL_FMT_CW_SelectProperty=Select Property ({0})
 
   CTL_CW_Component=Component:
+  CTL_CW_Component_Mnemonic=C
+  ACSD_CTL_CW_Component=N/A
   CTL_CW_NotSet=<not set>
   CTL_CW_Code=<code>
   CTL_CW_GetParametersFrom=Get Parameter From:
   CTL_CW_Value=Value:
+  CTL_CW_Value_Mnemonic=V
+  ACSD_CTL_CW_Value=N/A
   CTL_CW_Bean=Bean:
+  CTL_CW_Bean_Mnemonic=B
+  ACSD_CTL_CW_Bean=N/A
   CTL_CW_Property=Property:
+  CTL_CW_Property_Mnemonic=P
+  ACSD_CTL_CW_Property=N/A
   CTL_CW_NoProperty=<No Property Selected>
   CTL_CW_Method=Method Call:
+  CTL_CW_Method_Mnemonic=t
+  ACSD_CTL_CW_Method=N/A
   CTL_CW_NoMethod=<No Method Selected>
   CTL_CW_UserCode=User Code:
+  CTL_CW_UserCode_Mnemonic=s
+  ACSD_CTL_CW_UserCode=N/A
   CTL_CW_SelectBean=<Select Bean>
+  CTL_CW_MethodList=Methods
+  CTL_CW_MethodList_Mnemonic=M
+  ACSD_CTL_CW_MethodList=N/A
+  CTL_CW_PropertyList=Properties
+  CTL_CW_PropertyList_Mnemonic=P
+  ACSD_CTL_CW_PropertyList=N/A
+
+  ACSD_CTL_CW_ValueField=N/A
+  ACSD_CTL_CW_BeanCombo=N/A
+  ACSD_CTL_CW_PropertyLabel=N/A
+  ACSD_CTL_CW_MethodLabel=N/A
+  ACSD_CTL_CW_UserCodeArea=N/A
+
+  ACSD_CTL_CW_PropertyButton=N/A
+  ACSD_CTL_CW_MethodButton=N/A
+
   CTL_PREVIOUS=< Previous
   CTL_FINISH=Finish
   CTL_NEXT=Next >
@@ -510,14 +543,23 @@ CTL_NoComponent=<none>
 
 #EventCustomEditor
 CTL_EE_ADD=Add...
+CTL_EE_ADD_Mnemonic=A
 CTL_EE_REMOVE=Remove
+CTL_EE_REMOVE_Mnemonic=R
 CTL_EE_RENAME=Rename...
+CTL_EE_RENAME_Mnemonic=n
 CTL_EE_RENAME_CAPTION=Rename Handler
 CTL_EE_RENAME_LABEL=New name for handler:
 CTL_EE_NOT_IDENTIFIER=The handler name is not a valid Java identifier.
 CTL_EE_ALREADY_EXIST=Event handler of this name is already included.
 CTL_EE_ADD_CAPTION=Add Handler
 CTL_EE_ADD_LABEL=New Handler Name:
+CTL_EE_Handlers=Handlers
+CTL_EE_Handlers_Mnemonic=H
+ACSD_CTL_EE_Handlers=N/A
+ACSD_CTL_EE_ADD=N/A
+ACSD_CTL_EE_REMOVE=N/A
+ACSD_CTL_EE_RENAME=N/A
 
 #CustomCodeEditor
 CTL_CC_PROPERTY_EDITOR=Property Editor
@@ -572,9 +614,16 @@ CTL_PropertyEditorDoesNot=Custom Editing of this Property is not Supported
 CTL_AdvancedInitializationCode=Advanced Initialization Code
 LAB_SelectMode=Select Mode:
 LAB_SelectMode.mnemonic=M
+ACSD_BTN_SelectMode=N/A
 
 CTL_GeneratePostInitializationCode=Generate Post-initialization Code
+CTL_GeneratePostInitializationCode_Mnemonic=o
 CTL_GeneratePreInitializationCode=Generate Pre-initialization Code
+CTL_GeneratePreInitializationCode_Mnemonic=r
+ACSD_CTL_GeneratePostInitializationCode=N/A
+ACSD_CTL_GeneratePreInitializationCode=N/A
+ACSD_CTL_GeneratePostInitializationCodeArea=N/A
+ACSD_CTL_GeneratePreInitializationCodeArea=N/A
 
 #Bean Installer
 MSG_InstalledArchives=Installed Archives
