--- a/form/src/org/netbeans/modules/form/editors2/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/editors2/Bundle.properties
@@ -26,3 +26,5 @@ LAB_AvailableBorders=Available Borders
 # CursorEditor
 CTL_CursorEditor_DisplayName=Cursor Editor
 CTL_SelectCursorName=Select Cursor Name
+CTL_SelectCursorName_Mnemonic=S
+ACSD_CTL_SelectCursorName=N/A
