--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -83,6 +83,8 @@ CTL_SelectBeans=Available JavaBeans:
 CTL_Select=Select
 CTL_SelectPalette=Palette Category
 CTL_PaletteCategories=Select Palette Category:
+CTL_PaletteCategories_Mnemonic=S
+ACSD_CTL_PaletteCategories=N/A
 CTL_InstallingBeanTitle=Installing JavaBeans
 CTL_FMT_InstallingBean=Installing {0} ...
 CTL_UpdatingPalette=Updating Component Palette ...
