--- a/o.n.core/test/build.xml
+++ b/o.n.core/test/build.xml
@@ -147,7 +147,7 @@ Microsystems, Inc. All Rights Reserved.
     
     <target name="all" depends="runtests"/>
     <target name="buildtests" depends="jars"/>
-    <target name="cleantests" depends="clean"/>
+    <target name="cleantests" depends="clean"/>    
 
     <target name="prepare-xtest">
         <ant dir="${xtest.home}" antfile="build.xml" target="buildxtest"/>
@@ -248,7 +248,8 @@ Microsystems, Inc. All Rights Reserved.
     <target name="ide_test_bootstrap" depends="init">
     
         <pathdef useid="test.classpath">
-            <path refid="test.basepath"/>
+            <!-- this path is mounted to repo in IDE -->
+            <!-- <path refid="test.basepath"/> -->
             <path>
                 <!-- this classpath is made of directories in testbags -->
                 <pathelement path="${tbag.classpath}"/>
@@ -270,11 +271,14 @@ Microsystems, Inc. All Rights Reserved.
             </classpath>
         </property>
 
-        <property name="args" value="-jdkhome ${jdkhome} -userdir ${xtest.userdir} -cp:p ${xtest.ide.path} -J-Dtest.class=${test.class} -J-Dtest.classpath=${test.classpath} -J-Dtest.ant.file=${ant.file} -J-Dtest.target=${test.target} -J-Dxtest.home=${xtest.home} -J-Dxtest.includes=${xtest.includes} -J-Dxtest.excludes=${xtest.excludes} -J-Dtbag.classpath=${tbag.classpath} -J-Dtbag.patternset.include=${tbag.patternset.include} -J-Dtbag.patternset.exclude=${tbag.patternset.exclude} -J-Dtbag.testtype=${tbag.testtype} -J-Dtbag.formater=${tbag.formater} -J-Ddistexec=true -J-Dtest.exit=true -J-Dnetbeans.full.hack=true"/>
+        <property name="args" value="-jdkhome ${jdkhome} -userdir ${xtest.userdir} -cp:p ${xtest.ide.path} -J-Dtest.class=${test.class} -J-Dtest.classpath=${test.classpath} -J-Dtest.ant.file=${ant.file} -J-Dtest.target=${test.target} -J-Dxtest.home=${xtest.home} -J-Dxtest.includes=${xtest.includes} -J-Dxtest.excludes=${xtest.excludes} -J-Dtbag.classpath=${tbag.classpath} -J-Dtbag.patternset.include=${tbag.patternset.include} -J-Dtbag.patternset.exclude=${tbag.patternset.exclude} -J-Dtbag.testtype=${tbag.testtype} -J-Dtbag.formater=${tbag.formater} -J-Dxtest.distexec=true -J-Dtest.exit=true -J-Dnetbeans.full.hack=true"/>
         <echo message="ARGUMENTS = ${args}"/>
 
         <copy file="${xtest.home}/lib/patches/testmain.jar" todir="${netbeans.test.home}/lib/patches"/>
-        <copy file="${xtest.home}/lib/xtest.jar" todir="${netbeans.test.home}/lib"/>
+        <copy file="${xtest.home}/lib/xtest.jar" todir="${netbeans.test.home}/lib/ext"/>
+        <copy file="${xtest.home}/lib/xtest-ext.jar" todir="${netbeans.test.home}/lib/ext"/>
+        <copy file="${xtest.home}/lib/junit.jar" todir="${netbeans.test.home}/lib/ext"/>
+        <copy file="${xtest.home}/lib/junit-ext.jar" todir="${netbeans.test.home}/lib/ext"/>
 
         <exec dir="${netbeans.test.home}/bin" executable="${netbeans.test.home}/bin/runide.exe" 
               os="Windows 95 Windows 98 Windows NT Windows 2000"
@@ -288,7 +292,10 @@ Microsystems, Inc. All Rights Reserved.
         </exec>
 
         <delete file="${netbeans.test.home}/lib/patches/testmain.jar"/>
-        <delete file="${netbeans.test.home}/lib/xtest.jar"/>
+        <delete file="${netbeans.test.home}/lib/ext/xtest.jar"/>
+        <delete file="${netbeans.test.home}/lib/ext/xtest-ext.jar"/>
+        <delete file="${netbeans.test.home}/lib/ext/junit.jar"/>
+        <delete file="${netbeans.test.home}/lib/ext/junit-ext.jar"/>
         
     </target>
 
@@ -349,7 +356,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
     
     <!-- Compiles all tests -->
-    <target name="compile" depends="init" unless="distexec">
+    <target name="compile" depends="init" unless="xtest.distexec">
         <ant dir="unit/src/org/netbeans/core/modules"/>
         <javac srcdir="unit/src" 
                deprecation="${build.compiler.deprecation}"
@@ -369,7 +376,7 @@ Microsystems, Inc. All Rights Reserved.
     
     <!-- Creates lib/test.jar with all tests for this module,       -->
     <!-- maybe there should be more includes here, not just classes -->
-    <target name="jars" depends="compile" unless="distexec">
+    <target name="jars" depends="compile" unless="xtest.distexec">
         <mkdir dir="${xtest.build}/${xtest.file.location}"/>
         <jar basedir="." 
              jarfile="${xtest.build}/${xtest.file.location}/${xtest.file.name}"
