distexec renamed to xtest.distexec

--- a/xtest/build.xml
+++ b/xtest/build.xml
@@ -95,7 +95,7 @@ Microsystems, Inc. All Rights Reserved.
         <ant antfile="build.xml" target="runtests">
             <property name="xtest.basedir" value="dist"/>
             <property name="xtest.code.classpath" value="ide"/>            
-            <property name="distexec" value="true"/>
+            <property name="xtest.distexec" value="true"/>
             <property name="netbeans.home" location="${netbeans.home}"/>
         </ant>
     </target>
@@ -201,7 +201,7 @@ Microsystems, Inc. All Rights Reserved.
     </target>
 
     <target name="buildxtest"
-            description="Builds XTest framework." unless="distexec">
+            description="Builds XTest framework." unless="xtest.distexec">
         <ant antfile="xtest.xml"/>
     </target>
     
