--- a/openide/build.xml
+++ b/openide/build.xml
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='ISO-8859-1' ?>
+<?xml version='1.0' encoding='ISO-8859-1' ?><!-- -*- sgml-indent-step: 2 -*- -->
 <!--
                 Sun Public License Notice
 
@@ -565,6 +565,20 @@ To force them to be rebuilt, run again with -Dopen-apis-force-rebuild=true
       <include name="**/doc-files/**/*.html"/>
     </checklinks>
     <zip zipfile="OpenAPIs.zip" basedir="OpenAPIs"/>
+  </target>
+  <target name="apis-tidy" description="Run the Tidy HTML checker on API prose documents.">
+    <apply parallel="true" failonerror="true" executable="tidy">
+      <fileset dir="api/doc">
+        <include name="**/*.html"/>
+        <!-- Machine-generated: -->
+        <exclude name="org/openide/filesystems/doc-files/resolverDocumentation.html"/>
+        <!-- Missing title tags, it is OK: -->
+        <exclude name="**/package.html"/>
+      </fileset>
+      <arg value="-e"/>
+      <arg value="--gnu-emacs"/>
+      <arg value="true"/>
+    </apply>
   </target>
 
   <!-- API examples. -->
