--- a/o.apache.tools.ant.module/build.xml
+++ b/o.apache.tools.ant.module/build.xml
@@ -119,8 +119,8 @@ Contributor(s): Jayme C. Edwards, Jesse Glick.
     <jar jarfile="test/ant.jar" manifest="manifest-subst.mf" compress="false">
       <fileset dir="src" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
       <fileset dir="javahelp" excludesfile="../nbbuild/standard-jar-excludes.txt"/>
-      <zipfileset src="${binroot}/ant/release/modules/ext/ant.jar" excludes="META-INF/MANIFEST.MF"/>
-      <zipfileset src="${binroot}/ant/release/modules/ext/ant-optional.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="${binroot}/ant/release/modules/ext/ant-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
+      <zipfileset src="${binroot}/ant/release/modules/ext/ant-optional-1.4.1.jar" excludes="META-INF/MANIFEST.MF"/>
     </jar>
   </target>
   <target name="test" depends="test-build" description="Test module inside running IDE.">
