--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -48,6 +48,9 @@ VALUE_WORKSPACE_NONE=None
 PROP_USE_INDENT_ENGINE=Use Indentation Engine
 HINT_USE_INDENT_ENGINE=If True, the editor's indentation engine is used for generated code. \
                        If False, only simple (but faster) indentation is performed.
+PROP_GENERATE_ON_SAVE=Use Deferred Code Generation
+HINT_GENERATE_ON_SAVE=If True, the code is generated only when the form is saved. \
+                      If False, the code is updated with each change in the form.
 #PROP_INDENT_AWT_HIERARCHY=Indent AWT Hierarchy
 #HINT_INDENT_AWT_HIERARCHY=If True, the code for component initialization is indented according to the AWT hierarchy.
 # PROP_SORT_EVENT_SETS=Sort Event Sets
@@ -95,8 +98,8 @@ VALUE_OutputLevel_Maximum=Maximum
 #PROP_NULL_LAYOUT=Generate Null Layout
 #HINT_NULL_LAYOUT=If true, null layout code is generated for Absolute positioning; \
 #  if false, code using Forte's AbsoluteLayout is generated.
-PROP_SELECTED_PALETTE=Available Component Palettes
-HINT_SELECTED_PALETTE=Choose from multiple designs for the Component Palette.
+PROP_SELECTED_PALETTE=Component Palette
+HINT_SELECTED_PALETTE=Choose from multiple designs of the Component Palette.
 VALUE_SELECTED_PALETTE_NONE=None
 PROP_OPEN_FORMS_IN_ONE_WINDOW=Open Forms in One Window
 HINT_OPEN_FORMS_IN_ONE_WINDOW=If True, opened forms are docked into one Form Designer window. If False, each form opens in its own window.
