--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -355,7 +355,7 @@ workspaceswitcher
     <ant dir="../externaleditor" target="netbeans"/>
   </target>
 
-  <target name="all-corba" depends="all-openide,all-editor,all-projects,all-core,all-java">
+  <target name="all-corba" depends="all-openide,all-editor,all-java">
     <echo message="Building module corba..."/>
     <ant dir="../corba" target="netbeans"/>
   </target>
