Second pass at resource bundle language use and grammar

--- a/beans/src/org/netbeans/modules/beans/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/Bundle.properties
@@ -132,13 +132,13 @@ COMMENT_PropertyChangeSupport=Utility field used by bound properties.
 
 COMMENT_VetoableChangeSupport=Utility field used by constrained properties.
 
-COMMENT_AddPropertyChangeListener=Add a PropertyChangeListener to the listener list.\n\
+COMMENT_AddPropertyChangeListener=Adds a PropertyChangeListener to the listener list.\n\
 		  @param l The listener to add.\n
 
 COMMENT_RemovePropertyChangeListener=Removes a PropertyChangeListener from the listener list.\n\
 		  @param l The listener to remove.\n
 
-COMMENT_AddVetoableChangeListener=Add a VetoableChangeListener to the listener list.\n\
+COMMENT_AddVetoableChangeListener=Adds a VetoableChangeListener to the listener list.\n\
 		  @param l The listener to add.\n
 
 COMMENT_RemoveVetoableChangeListener=Removes a VetoableChangeListener from the listener list.\n\
@@ -182,7 +182,7 @@ HINT_indexedGetter=Indexed getter method of this property.
 HINT_indexedSetter=Indexed setter method of this property.
 HINT_addListener=Method for adding listeners.
 HINT_removeListener=Method for removing listeners.
-HINT_isUnicast=If True, only one listener can receive events.
+HINT_isUnicast=If True, only one listener can be registred.
 
 # Message from node element
 MSG_Cannot_Write=Cannot modify a read-only property.
@@ -244,7 +244,7 @@ Templates/Beans/BeanInfo.java=BeanInfo
 Templates/Beans/Customizer.java=Customizer
 Templates/Beans/PropertyEditor.java=Property Editor
 #unable to create field for property
-MSG_Cannot_Create_Field=A problem was encountered during property field generation.\nField for the property will not be created.
+MSG_Cannot_Create_Field=A problem was encountered during property field generation.\nThe field for the property will not be created.
 MSG_Delete_Setter=Setter method will be deleted.
 MSG_Delete_Getter=Getter method will be deleted.
 MSG_Delete_Getters=Getter methods will be deleted.
