--- a/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
@@ -39,7 +39,7 @@ CTL_Null=null
 CTL_ImageSourceName=Name:
 CTL_OpenDialogName=Open Image File
 CTL_FileSystemName=File &System
-CTL_Icon_not_exists=Image class path for {0} is not valid
+CTL_Icon_not_exists=Image class path for {0} is not valid.
 
 #Bean info features properties and hints
 
@@ -73,10 +73,10 @@ PROP_Bi_iconMono32x32=Icon 32x32 Mono
 PROP_Bi_defaultPropertyIndex=Default Property Index
 PROP_Bi_defaultEventIndex=Default Event Index
 PROP_Bi_customizer=Customizer Name Code
-PROP_Bi_useSuperclass=Use superclass
+PROP_Bi_useSuperclass=Use Superclass
 
-HINT_Bi_displayName=Code for displaying a localized name for this feature.
-HINT_Bi_expert=If True, feature appears in the Expert tab of IDE property sheets. 
+HINT_Bi_displayName=Code used to display a localized name for this feature.
+HINT_Bi_expert=If no properties are marked Preferred, features marked Expert appear in the Other tab of IDE property sheets. 
 HINT_Bi_hidden=If True, feature is intended only for tool use.
 HINT_Bi_name=Name of this feature as it appears in code.
 HINT_Bi_preferred=If True, feature appears in the Preferred tab of IDE property sheets.
@@ -88,7 +88,7 @@ HINT_Bi_mode=Specifies whether element is readable and writable, generates gette
 HINT_Bi_propertyEditorClass=Specifies class for custom property editor.
 HINT_Bi_niGetter=If True, property has non-indexed getter.
 HINT_Bi_niSetter=If True, property has non-indexed setter.
-HINT_Bi_unicast=If True, only one listener can receive events.
+HINT_Bi_unicast=If True, only one listener can be registred.
 HINT_Bi_inDefaultEventSet=If True, marks an event set as being in the "default" set.
 HINT_Bi_nullDescriptor=If True, lazy initialization will be used to init bean descriptor.
 HINT_Bi_nullProperties=If True, lazy initialization will be used to init properties.
