Related to bug #13035: dynamic refreshing of beans in palette enabled (for beans copied as links to java objects).

--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -38,6 +38,10 @@ CTL_NewCategoryValue=Category
 CTL_ShowPalette=Show Palette
 CTL_HidePalette=Hide Palette
 
+# display names of possible paste types for palette category node
+CTL_PasteBean=Paste Bean
+CTL_PasteLink=Paste Link
+
 # context menu on palette item button
 CTL_MoveLeft=Move Left
 CTL_MoveRight=Move Right
