--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -102,3 +102,5 @@ Templates/Services/SearchType/org-netbeans-modules-search-FullTextType.settings=
 Templates/Services/SearchType/org-netbeans-modules-search-ModificationDateType.settings=Date
 Templates/Services/SearchType/org-netbeans-modules-search-ObjectTypeType.settings=Type
 Templates/Services/SearchType/org-netbeans-modules-search-ObjectNameType.settings=Object Name
+
+ACS_DIALOG_DESC=Dialog for searching by criteria
