#16512 - persistence of annotation types properties is fixed #15794 - SAX used instead of DOM, some properties initilized lazily option for visibility of glyph gutter added DTD improved

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -136,8 +136,8 @@ NAME_coloring_base-default=Default
 HINT_coloring_base-default=Regular text in document.
 EXAMPLE_coloring_base-default=regular text
 
-NAME_coloring_base-line-number=Line Number
-HINT_coloring_base-line-number=Line numbers along left side of document.
+NAME_coloring_base-line-number=Glyph and Line Number Margin 
+HINT_coloring_base-line-number=Line numbers and glyph icon maring along left side of document.
 EXAMPLE_coloring_base-line-number=123
 
 NAME_coloring_base-selection=Selected Text
@@ -869,3 +869,5 @@ PROP_combineGlyphs=Combining of Annotations
 HINT_combineGlyphs=Whether or not the combining of annotations is allowed.
 PROP_glyphsOverLineNumbers=Draw Glyph Over Line Numbers
 HINT_glyphsOverLineNumbers=Whether or not the glyph icons can be drawn over the line numbers.
+PROP_showGlyphGutter=Always Show Glyph Margin
+HINT_showGlyphGutter=Show glyph margin even when there are no annotations.
