--- a/db/src/org/netbeans/modules/db/resources/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/resources/Bundle.properties
@@ -350,6 +350,19 @@ CreateTableAddButtonTitle = Add column
 CreateTableRemoveButtonTitle = Remove
 CreateTableDialogTitle = Create Table
 
+CreateTable_0 = Key
+CreateTable_1 = Index
+CreateTable_2 = Null
+CreateTable_3 = Unique
+CreateTable_4 = Column name
+CreateTable_5 = Data type
+CreateTable_6 = Size
+CreateTable_7 = Scale
+CreateTable_8 = Comment
+CreateTable_9 = Default value
+CreateTable_10 = Check
+CreateTable_11 = Check constraint
+
 CreateTableSortNone = None
 CreateTableSortUp = Up
 CreateTableSortDown = Down
