--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -12,10 +12,13 @@
 CTL_DID_YOU_KNOW=Did you know?
 CTL_OpeningBrowser=Opening browser ...
 CTL_NEXTSTARTUP=Show Welcome Screen on Startup
+MNE_NEXTSTARTUP=S
 ERR_NoTipsFound=Tips not found
 CTL_START_TITLE=Welcome to NetBeans
 CTL_NEXT_BUTTON=Next Tip
+MNE_NEXT_BUTTON=N
 CTL_PREV_BUTTON=Previous Tip
+MNE_PREV_BUTTON=P
 
 CTL_Welcome_hint=Items for the Welcome Screen
 #CTL_newMenuName=Menu name
@@ -31,6 +34,25 @@ COLOR_WelcomeBACKGROUND=CCCCCC
 LABEL_WelcomeHTMLPages=To get started, choose a task below.
 LABEL_WelcomeTipPages=Tip of the Day
 CTL_CLOSE=Close
+
+# INIT a11y
+ACSD_tableLabel=n/a
+ACSD_descriptionLabel=n/a
+
+ACSD_nextTipButton=n/a
+ACSD_prevTipButton=n/a
+ACSD_contextBrowser=n/a
+ACSN_contextBrowser=n/a
+ACSD_tipsBrowser=n/a
+ACSN_tipsBrowser=n/a
+ACSD_closeButton=n/a
+ACSN_closeButton=n/a
+ACSD_showOnStartupCheckBox=n/a
+ACSN_showOnStartupCheckBox=n/a
+
+ACSD_proxyCheckBox=n/a
+ACSD_sdiRadioButton=n/a
+ACSD_mdiRadioButton=n/a
 
 #Title of the new from template dialog
 #{0} = comment passed by the panel
