--- a/httpserver/build.xml
+++ b/httpserver/build.xml
@@ -33,7 +33,7 @@ Microsystems, Inc. All Rights Reserved.
           <include name="openide*.jar" />
         </fileset>
         <pathelement location="${binroot}/httpserver/release/modules/ext/webserver.jar"/>
-        <pathelement location="${binroot}/core/release/lib/ext/servlet.jar"/>
+        <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar"/>
       </classpath>
     </javac>
   </target>
